---------------------------------------------------------------------------------------------------
Version: 0.5.0
Date: 2021-03-08
  Changes:
    - New visuals by snouz (icons, technologies)
    - New mod icon
    - Added icon mipmaps
---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 2021-02-28
  Features:
    - Deadlock stacking and crating, with thanks to GeneralTank
---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 2021-02-27
  Features:
    - New optional intermediates: Silicon wafer & Solar cell.
---------------------------------------------------------------------------------------------------
Version: 0.3.7
Date: 2021-02-15
  Changes:
    - Loose compabitility with IR2
---------------------------------------------------------------------------------------------------
Version: 0.3.6
Date: 2021-02-13
  Changes:
    - Use K2 silicon icon.
---------------------------------------------------------------------------------------------------
Version: 0.3.5
Date: 2021-02-12
  Fixes:
    - Fix silicon vulcanite smelting recipe.
---------------------------------------------------------------------------------------------------
Version: 0.3.4
Date: 2021-01-31
  Changes:
    - Concrete will always try to keep stone brick in some step of the chain.
      Concrete will also use sand where possible. I.e concrete "realism".
      This may be further adjusted but these goals will remain.
---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 2021-01-31
  Changes:
    - SE Delivery cannon capsules
    - K2 Silica matter
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 2021-01-30
  Fixes:
    - K2+AAI concrete recipe